...
        {/* Group Info Section */}
        <View
          style={{
            ...styles.section,
            ...(!isShowingButtons() && {paddingBottom: 0}),
          }}
          testID="group-info-section">
          <View style={styles.sectionHeader}>
            <Text style={styles.sectionTitle}>Group Information</Text>
          </View>

          <View style={styles.groupInfoContainer}>
            <Text style={styles.meetingTimeText}>
...
            <Text style={styles.navTileText}>Announcements</Text>
          </TouchableOpacity>

          <TouchableOpacity
            style={styles.navTile}
            onPress={navigateToGroupTreasury}
            testID="group-overview-treasury-tile">
            <View style={styles.navTileIcon}>
              <Text style={styles.navTileIconText}>💰</Text>
            </View>
            <Text style={styles.navTileText}>Treasury</Text>
          </TouchableOpacity>

...
